# PyCodeRadar

./: PyCodeRadar.py  README.md  pyproject.toml  requirements-tools.txt  requirements.txt
pycoderadar/: __init__.py  __main__.py  analysis.py  app.py  config.py  constants.py  external_tools.py  formatters.py  main_window.py  models.py  option_defs.py  presets.py  styles.py  widgets.py  worker.py
